kubernetes/bff.yaml
kind: Service
apiVersion: v1
metadata:
  name: bff
  labels:
    app: bff
  namespace: eplace
spec:
  ports:
  - port: 8080
    targetPort: bff-server
  selector:
    app: bff
  type: NodePort
