kubernetes/web.yaml
kind: Service
apiVersion: v1
metadata:
  name: web
  labels:
    app: web
  namespace: eplace
spec:
  ports:
  - port: 8080
    targetPort: web-server
  selector:
    app: web
  type: NodePort
