kubernetes/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: eplace-ingress
  namespace: eplace
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: bff
            port:
              number: 8080
        path: "/api"
      - pathType: Prefix
        backend:
          service:
            name: bff
            port:
              number: 8080
        path: "/socket.io"
      - pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080
        path: "/"
